# ghostpen

./: .gitignore  LICENSE  MANIFESTO.md  PRIVACY.md  README.md  index.html  package-lock.json  package.json
scripts/: download-model.py
src/: App.css  App.tsx  logger.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/models/: README.md
src-tauri/src/: audit.rs  lib.rs  llm.rs  t5.rs
src-tauri/tests/: test_accuracy.rs
src/components/: AiCorrections.tsx  Editor.tsx  IssueSidebar.tsx  OnboardingWizard.tsx  RewritePanel.tsx
src/types/: ai.ts
tests/: grammar_corpus.json
